# ppabam-check-os-ver

./: README.md  ppabam-random-match-while.sh  pyproject.toml
src/ppabam_check_os_ver/: hi.py  osver.py
tests/: .test_first.py.swp  test_first.py
