[project]
name = "ppabam-check-os-ver"
version = "0.3.0"
description = "Detects and outputs the os version."
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/ppabam/ppabam-check-os-ver"
Issues = "https://github.com/ppabam/ppabam-check-os-ver/issues"
